# Akira

./: Cargo.toml  build.rs
src/: engine.cc  lib.rs  llama.rs  main.rs
src/decoding/: decoding.rs  mod.rs
src/include/: engine.h
